https://tools.hmcts.net/jira/browse/DTSCCI-2514
Merge the relevant packages and functionality from the civil-commons repository directly into the civil-service repository.

update 1: checkstyle fix: The classes not passing the check in civil-commons originally used .* imports instead of direct class imports in 11 test files.

update n: checkstyle fixes

update 10:
Resolved SonarQube highlighted issues introduced by civil-comons.
Resolved CVE-2024-22259 in URI building classes LocationRefDataService and PostcodeLookupService.
Suppress CVE warnings post-resolution for verified secure implementations.
Document deprecated IDAM method usage for future migration